--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,114 +1,393 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unitec</title>
-    <%- include('./partials/head.html') %>
-    <link rel="stylesheet" href="../css/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unitec</title>
+  <%- include('./partials/head.html') %>
+  <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body class="<%= pagina %>">
 
-    <%- include('./partials/loader.html') %>
+  <%- include('./partials/loader.html') %>
 
-    <%- include('./partials/nav.html')  %>
+  <%- include('./partials/nav.html')  %>
 
-    <section style="width: 100vw; min-height: 100vh; overflow: hidden; position: relative;" class="canvas-container">
-        <div class="background-fixed">
-          <span class="bebas unitec">UNITEC</span>
+  <section style="width: 100vw; min-height: 100vh; overflow: hidden; position: relative;" class="canvas-container">
+    <div class="background-fixed">
+      <span class="bebas unitec">UNITEC</span>
+    </div>
+    <div class="canvas-principal"></div>
+    <canvas id="canvas-gradient" data-transition-in data-v-79abd109></canvas>
+    <div class="description">
+      <h1 class="satoshi phrase">Encuentra el sonido que mereces</h1>
+      <button class="satoshi button_more">Ver mas</button>
+      <div class="price">
+        <h3 class="satoshi">$350.000</h3>
+        <div class="buttons_color">
+          <span class="color_black"></span>
+          <span class="color_white"></span>
         </div>
-        <div class="canvas-principal"></div>
-        <canvas id="canvas-gradient" data-transition-in data-v-79abd109></canvas>
-        <div class="description">
-          <h1 class="satoshi phrase">Encuentra el sonido que mereces</h1>
-          <button class="satoshi button_more">Ver mas</button>
-          <div class="price">
-            <h3 class="satoshi">$350.000</h3>
-            <div class="buttons_color">
-              <span class="color_black"></span>
-              <span class="color_white"></span>
-            </div>
-          </div>
-        </div>
-      </section>
-    
-      <section class="about">
-        <h2 class="satoshi phrase_about">La perfección sonora es más que un estándar.</h2>
-        <p class="satoshi light info_about">Somos una empresa encargada de la comercialización de audifonos de la mayor calidad existente en el mercado.</p>
-        <div class="btn-about">
-          <p class="satoshi">Acerca de nosotros</p>
-          <div class="arrow">
-            <span class="arrow-bar"></span>
-            <svg class="arrow-head" fill="#ffffff" height="25px" width="25px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
-              <path id="XMLID_222_" d="M250.606,154.389l-150-149.996c-5.857-5.858-15.355-5.858-21.213,0.001
+      </div>
+    </div>
+  </section>
+
+  <section class="about">
+    <h2 class="satoshi phrase_about">La perfección sonora es más que un estándar.</h2>
+    <p class="satoshi light info_about">Somos una empresa encargada de la comercialización de audifonos de la mayor calidad existente en el mercado.</p>
+    <div class="btn-about">
+      <p class="satoshi">Acerca de nosotros</p>
+      <div class="arrow">
+        <span class="arrow-bar"></span>
+        <svg class="arrow-head" fill="#ffffff" height="25px" width="25px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
+          <path id="XMLID_222_" d="M250.606,154.389l-150-149.996c-5.857-5.858-15.355-5.858-21.213,0.001
                c-5.857,5.858-5.857,15.355,0.001,21.213l139.393,139.39L79.393,304.394c-5.857,5.858-5.857,15.355,0.001,21.213
                C82.322,328.536,86.161,330,90,330s7.678-1.464,10.607-4.394l149.999-150.004c2.814-2.813,4.394-6.628,4.394-10.606
                C255,161.018,253.42,157.202,250.606,154.389z" />
-            </svg>
-            </span>
-          </div>
-        </div>
-      </section>
-    
-      <section class="products">
-        <div class="products-description">
-          <h2 class="satoshi">Productos</h2>
-          <p class="satoshi light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit consequuntur et quis quae alias quam maiores eligendi similique optio dignissimos hic, ut dolor enim sapiente ipsam tenetur perferendis iste reiciendis.</p>
-        </div>
-        <div class="products-container">
-          <div class="splide">
-            <div class="splide__track">
-              <ul class="splide__list">
-                <li class="splide__slide">
-                  <div class="splide_item" id="12345">
-                    <div class="image">
-                      <img src="../images/1.webp" alt="">
-                    </div>
-                    <p class="satoshi light">Precio - $350.000</p>
-                    <h2 class="satoshi">Audifonos Unitec</h2>
-                  </div>
-                </li>
-                <li class="splide__slide">
-                  <div class="splide_item" id="12346">
-                    <div class="image">
-                      <img src="../images/3.webp" alt="">
-                    </div>
-                    <p class="satoshi light">Precio - $350.000</p>
-                    <h2 class="satoshi">Audifonos Unitec</h2>
-                  </div>
-                </li>
-                <li class="splide__slide">
-                  <div class="splide_item" id="12347">
-                    <div class="image">
-                      <img src="../images/2.webp" alt="">
-                    </div>
-                    <p class="satoshi light">Precio - $350.000</p>
-                    <h2 class="satoshi">Audifonos Unitec</h2>
-                  </div>
-                </li>
-                <li class="splide__slide">
-                  <div class="splide_item" id="12348">
-                    <div class="image">
-                      <img src="../images/4.webp" alt="">
-                    </div>
-                    <p class="satoshi light">Precio - $350.000</p>
-                    <h2 class="satoshi">Audifonos Unitec</h2>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-    
-      <section class="product-details">
-        <h2 class="satoshi">Audifonos unitec</h2>
-        <p class="satoshi light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero non nemo necessitatibus ea earum quia sed fugit ipsum praesentium tempora, facere officiis dicta libero. Dignissimos cum voluptatibus temporibus soluta totam pariatur sint. Voluptate similique eos nemo sit, totam asperiores, ab, quod ex dignissimos maxime placeat quaerat sint temporibus fugiat corporis?</p>
-        <div class="product-detail">
-          <div class="canvas-product"></div>
-        </div>
-      </section>
+        </svg>
+        </span>
+      </div>
+    </div>
+  </section>
 
-    <%- include('./partials/footer.html') %>
+  <section class="products">
+    <div class="products-description">
+      <h2 class="satoshi">Productos</h2>
+      <p class="satoshi light">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit consequuntur et quis quae alias quam maiores eligendi similique optio dignissimos hic, ut dolor enim sapiente ipsam tenetur perferendis iste reiciendis.</p>
+    </div>
+    <div class="products-container">
+      <div class="splide">
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <div class="splide_item" id="12345">
+                <div class="image">
+                  <img src="../images/1.webp" alt="">
+                </div>
+                <p class="satoshi light">Precio - $350.000</p>
+                <h2 class="satoshi">Audifonos Unitec</h2>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="splide_item" id="12346">
+                <div class="image">
+                  <img src="../images/3.webp" alt="">
+                </div>
+                <p class="satoshi light">Precio - $350.000</p>
+                <h2 class="satoshi">Audifonos Unitec</h2>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="splide_item" id="12347">
+                <div class="image">
+                  <img src="../images/2.webp" alt="">
+                </div>
+                <p class="satoshi light">Precio - $350.000</p>
+                <h2 class="satoshi">Audifonos Unitec</h2>
+              </div>
+            </li>
+            <li class="splide__slide">
+              <div class="splide_item" id="12348">
+                <div class="image">
+                  <img src="../images/4.webp" alt="">
+                </div>
+                <p class="satoshi light">Precio - $350.000</p>
+                <h2 class="satoshi">Audifonos Unitec</h2>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="product-details">
+    <h2 class="satoshi">Audifonos unitec</h2>
+    <p class="satoshi light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero non nemo necessitatibus ea earum quia sed fugit ipsum praesentium tempora, facere officiis dicta libero. Dignissimos cum voluptatibus temporibus soluta totam pariatur sint. Voluptate similique eos nemo sit, totam asperiores, ab, quod ex dignissimos maxime placeat quaerat sint temporibus fugiat corporis?</p>
+    <div class="product-detail">
+      <div class="canvas-product"></div>
+    </div>
+  </section>
+
+  <%- include('./partials/footer.html') %>
+  <script type="module" src="../scripts/index.js">
+    import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.121.1/build/three.module.js";
+    import {
+      GLTFLoader
+    } from "https://cdn.jsdelivr.net/npm/three@0.121.1/examples/jsm/loaders/GLTFLoader.js";
+    import * as CARDS from "../scripts/cards"
+
+    gsap.registerPlugin(ScrollTrigger)
+
+    var scene_principal;
+    var camera_principal;
+    var canvas_principal;
+    var renderer_principal;
+
+    var canvas_product;
+    var camera_product;
+    var scene_product;
+    var renderer_product;
+
+    var cards;
+
+    var button_login;
+
+    const ROUTE_HEADPHONES = './Models3D/headphones/audifonosV3.gltf';
+
+    var lenis;
+
+    const sizes = {
+      width: window.innerWidth,
+      height: window.innerHeight
+    };
+
+    const initCanvasProduct = async () => {
+      scene_product = new THREE.Scene()
+
+      camera_product = new THREE.PerspectiveCamera(75, sizes.width / sizes.height, 0.1, 1000)
+      camera_product.position.set(0, 0, 8)
+      scene_product.add(camera_product)
+
+      renderer_product = new THREE.WebGLRenderer({
+        antialias: true,
+        alpha: true
+      })
+      renderer_product.setSize(sizes.width, sizes.height)
+
+      const p_light = new THREE.PointLight(0xffffff, 1)
+      p_light.position.set(0, 0, 0)
+      scene_product.add(p_light)
+
+      const p_light_2 = new THREE.PointLight(0xffffff, 2)
+      p_light_2.position.set(-10, -5, 0)
+      scene_product.add(p_light_2)
+
+      const p_light_3 = new THREE.PointLight(0xffffff, 2)
+      p_light_3.position.set(10, -5, 0)
+      scene_product.add(p_light_3)
+
+      canvas_product.appendChild(renderer_product.domElement)
+
+      const loader = new GLTFLoader()
+      loader.crossOrigin = ""
+
+      await loader.load(ROUTE_HEADPHONES, (gltf) => {
+          gltf.scene.traverse(child => {
+            child.castShadow = true;
+          });
+          gltf.scene.position.set(0, -2, 0)
+          gltf.scene.rotation.y = 3.15
+
+          scene_product.add(gltf.scene);
+
+          const rotation = gltf.scene.rotation
+
+          let tl = new TimelineLite()
+
+          const camera_position = camera_product.position
+          window.addEventListener('mousemove', (e) => {
+            const x = (e.clientX / window.innerWidth) * 2 - 1
+            const y = (e.clientY / window.innerHeight) * 2 + 1
+
+            camera_position.set((x * 0.1), (y * 0.1), 8)
+          }, false)
+
+        }, (xhr) => {
+          console.log((xhr.loaded / xhr.total) * 100 + '% loaded')
+        },
+        (error) => {
+          console.log(error)
+        })
+
+      const material_point = new THREE.MeshBasicMaterial({
+        color: 0xffffff
+      })
+      const geometry_point = new THREE.CircleGeometry(0.1, 32)
+
+      const point1 = new THREE.Mesh(geometry_point, material_point)
+      point1.position.set(2.3, -3, 2)
+      scene_product.add(point1)
+    }
+
+    const initCanvasPrincipal = () => {
+      scene_principal = new THREE.Scene()
+
+      camera_principal = new THREE.PerspectiveCamera(75, sizes.width / (sizes.height * 3), 0.1, 1000)
+      camera_principal.position.set(0, 0, 10)
+      scene_principal.add(camera_principal)
+
+      renderer_principal = new THREE.WebGLRenderer({
+        antialias: true,
+        alpha: true
+      })
+      renderer_principal.setSize(sizes.width, sizes.height * 3)
+
+      const p_light = new THREE.PointLight(0xffffff, 1)
+      p_light.position.set(-10, 10, 10)
+      scene_principal.add(p_light)
+
+      const p_light_2 = new THREE.PointLight(0xffffff, 1)
+      p_light_2.position.set(-30, 0, 10)
+      scene_principal.add(p_light_2)
+
+      canvas_principal.appendChild(renderer_principal.domElement)
+
+      const loader = new GLTFLoader()
+      loader.crossOrigin = ""
+
+      loader.load(ROUTE_HEADPHONES, (gltf) => {
+          gltf.scene.traverse(child => {
+            child.castShadow = true;
+          });
+          gltf.scene.rotation.x = 0.3
+          gltf.scene.rotation.z = 0.1
+          gltf.scene.position.set(-15, 6, -6)
+
+          scene_principal.add(gltf.scene);
+
+          const position = gltf.scene.position
+          const rotation = gltf.scene.rotation
+          let tl = new TimelineLite({
+            onComplete: function() {
+              completeAnimation(position, rotation)
+            }
+          })
+
+          tl.to(position, {
+              x: 2,
+              duration: 3,
+              ease: "power4.inOut"
+            }, 0)
+            .to(rotation, {
+              y: 5.3,
+              duration: 3,
+              ease: "power4.inOut"
+            }, 0)
+
+          showAnimations(tl)
+
+        }, (xhr) => {
+          console.log((xhr.loaded / xhr.total) * 100 + '% loaded')
+        },
+        (error) => {
+          console.log(error)
+        })
+
+      const showAnimations = (tl) => {
+        const chars = document.querySelector('.phrase')
+        const button_more = document.querySelector('.button_more')
+        const title = document.querySelector('.unitec')
+        const price = document.querySelector('.price')
+
+        const char_title = new SplitType(title, {
+          types: "chars"
+        });
+
+        tl.to(char_title.chars, {
+          xPercent: 20,
+          opacity: 1,
+          stagger: 0.02,
+          duration: 3,
+          ease: 'back.out'
+        }, 0.5)
+
+        tl.to(button_more, {
+          yPercent: -150,
+          opacity: 1,
+          stagger: 0.05,
+          ease: "power3.inOut",
+          duration: 1.5
+        }, 1.2)
+
+        tl.to(chars, {
+          yPercent: -80,
+          opacity: 1,
+          stagger: 0.05,
+          ease: "power4.inOut",
+          duration: 2
+        }, 0.5)
+      }
+
+      const completeAnimation = (position, rotation) => {
+        let tl = new TimelineLite()
+
+        tl.to(position, {
+          x: 12,
+          scrollTrigger: {
+            trigger: ".canvas-container",
+            start: "500px center",
+            end: "1000px center",
+            scrub: 1,
+            ease: "back.inOut(1.7)",
+          },
+        })
+
+        tl.to(rotation, {
+          y: 6,
+          scrollTrigger: {
+            trigger: ".canvas-container",
+            start: "500px center",
+            end: "1000 center",
+            scrub: 1,
+            ease: "back.inOut(1.7)"
+          },
+        })
+
+        /*
+        window.addEventListener('mousemove', (e)=>{
+        const x = (e.clientX / window.innerWidth) * 2 - 1 
+        
+        console.log(x);
+
+        rotation.y = x
+        }, false)
+        */
+      }
+    }
+
+    export const init = () => {
+      lenis = new Lenis()
+      canvas_principal = document.querySelector('.canvas-principal')
+      canvas_product = document.querySelector('.canvas-product')
+      button_login = document.querySelector('.order-btn')
+
+      initCanvasPrincipal()
+      initCanvasProduct()
+
+      var splide = new Splide('.splide', {
+        perPage: 2,
+        perMove: 1,
+        arrows: true,
+        pagination: false
+      })
+
+      button_login.addEventListener('click', () => {
+        window.location = '../login'
+      })
+
+      splide.mount()
+
+      cards = document.querySelectorAll('.splide_item')
+      CARDS.redirectUrl(cards)
+
+      animate()
+      requestAnimationFrame(raf)
+    }
+
+    function raf(time) {
+      lenis.raf(time)
+      requestAnimationFrame(raf)
+    }
+
+    function animate() {
+      renderer_principal.render(scene_principal, camera_principal)
+      renderer_product.render(scene_product, camera_product)
+      requestAnimationFrame(animate)
+    }
+  </script>
 </body>
+
 </html>
